<resources>
    <string name="app_name">Urth</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Search Fragment</string>
    <string name="second_fragment_label">News Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Make Query Below</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="popularity">Popularity</string>
    <string name="relevance">Relevance</string>[

    <string name="news_api_key">abac</string>
    <string name="facebook_application_id" translatable="false">373156617108177</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb373156617108177</string>

    <string name="title_activity_settings">Settings</string>

    <string name="get_news_articles">Get News Articles</string>

    <!-- Preference Titles -->
    <string name="articles_header">Articles</string>

    <!-- Articles Preferences -->
    <string name="default_sort_title">Default sort</string>
    <string name="recency_filter_title">Show articles from</string>
    <string name="max_articles_title">Maximum articles shown</string>
    <string name="search_radius_title">Limit search radius around tap</string>
    <string name="search_article_body_title">Search article body</string>
    <string name="search_article_body_summary_off">Search for locations in article titles only</string>
    <string name="search_article_body_summary_on">Search for locations in article bodies</string>

    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="remove_from_bookmarks">Remove from Bookmarks</string>
    <string name="no_news">We couldn\'t find any news associated with that location.</string>
    <string name="oops">Oops!</string>
    <string name="general_news">General News</string>
    <string name="technology">Technology</string>
    <string name="entertainment">Entertainment</string>

</resources>
