<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cameraZoom="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:uiZoomControls="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/news_open_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/entertainment_news_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:focusable="true"
        android:src="@android:drawable/star_big_off"
        android:visibility="invisible"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/general_news_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/technology_news_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:focusable="true"
        android:src="@drawable/fui_ic_apple_white_24dp"
        android:visibility="invisible"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entertainment_news_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/general_news_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:focusable="true"
        android:src="@drawable/fui_ic_check_circle_black_128dp"
        android:visibility="invisible"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toStartOf="@+id/mapView"
        app:layout_constraintTop_toBottomOf="@+id/news_open_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bookmark_news_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_bookmark_24"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toEndOf="@+id/news_open_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/general_news"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/general_news_button"
        app:layout_constraintTop_toBottomOf="@+id/bookmark_news_button" />

    <TextView
        android:id="@+id/text_technology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:visibility="invisible"
        android:text="@string/technology"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/technology_news_button"
        app:layout_constraintTop_toBottomOf="@+id/text_entertainment" />

    <TextView
        android:id="@+id/text_entertainment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:visibility="invisible"
        android:text="@string/entertainment"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/entertainment_news_button"
        app:layout_constraintTop_toBottomOf="@+id/text_general" />

</androidx.constraintlayout.widget.ConstraintLayout>